# golanguk2017

./: .gitignore  README.md  example_ideas.md  slides.md
example/: .bazelrc  BUILD  LaserSteak.bsdesign  WORKSPACE
example/bazel/: Dockerfile
example/cmd/api/: BUILD  main.go  main_test.go
example/js/: BUILD.bazel  package-lock.json  package.json  webpack.config.js
example/js/public/: index.html
example/js/public/assets/css/: styles.min.css
example/js/src/: index.js
